done some refactoring

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,13 @@
+NODE_ENV=development # development | production
+
 PORT=8888
 
 GRANT_TYPE=client_credentials
 CLIENT_ID=XXXX
 CLIENT_SECRET=XXXX
-REDIRECT_URI=http://localhost:8888/callback
+
+REDIRECT_URI_PRODUCTION=url_production/callback
+REDIRECT_URI_DEVELOPMENT=url_development/callback
 
 # URLS for the API
 ACCESS_TOKEN_URL=https://accounts.spotify.com/api/token
